# blackdoc

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  HOW_TO_RELEASE.rst  LICENSE  README.rst  blackdoc.py  dev-requirements.txt  py38.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  test_blackdoc.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  linters.yml  nightly.yml  parse_logs.py  pre-commit.yaml  publish.yml  update-hooks.py  update-hooks.yml
blackdoc/: __init__.py  __main__.py  autoupdate.py  blackcompat.py  blacken.py  classification.py  colors.py  console.py  diff.py  files.py  report.py
blackdoc/formats/: __init__.py  doctest.py  errors.py  ipython.py  markdown.py  no_code.py  none.py  register.py  rst.py
blackdoc/tests/: data.py  test_autoupdate.py  test_blacken.py  test_classification.py  test_cli.py  test_colors.py  test_doctest.py  test_init.py  test_ipython.py  test_markdown.py  test_no_code.py  test_none.py  test_report.py  test_rst.py
blackdoc/tests/data/: __init__.py  __main__.py  doctest.py  ipython.py  rst.py  utils.py
ci/requirements/: doc.txt  doc.yml  environment.yml  normal.txt  py36.yml  py37.yml  py38-upstream-dev.yml  py38.yml  upstream-dev.txt
doc/: changelog.rst  conf.py  contributing.rst  index.rst  installing.rst  options.rst  usage.rst
doc/directory/: file.py  file.rst  reformatted.py  reformatted.rst
scripts/: update-black.py
