[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "blackdoc",
  "blackdoc.formats",
  "blackdoc.tests",
  "blackdoc.tests.data",
]

[tool.setuptools_scm]

[project]
name = "blackdoc"
authors = [
  { name = "Justus Magin", email = "keewis@posteo.de" },
]
license = "MIT"
description = "run black on documentation code snippets"
readme = "README.rst"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">= 3.10"
dependencies = [
  "black>=24.4",    # 18 months window
  "more-itertools",
  "tomli",
  "pathspec",
  "rich",
]
dynamic = ["version"]


[project.urls]
Repository = "https://github.com/keewis/blackdoc"
Issues = "https://github.com/keewis/blackdoc/issues"
Documentation = "https://blackdoc.readthedocs.io/en/stable"

[project.scripts]
blackdoc = "blackdoc.__main__:main"

[tool.ruff]
target-version = "py310"
builtins = ["ellipsis"]
exclude = [
  ".git",
  ".eggs",
  "build",
  "dist",
  "__pycache__",
]
line-length = 100

[tool.ruff.lint]
ignore = [
  "E402",  # E402: module level import not at top of file
  "E501",  # E501: line too long - let black worry about that
  "E731",  # E731: do not assign a lambda expression, use a def
  "UP038", # UP038: use type union instead of tuples for isinstance
]
select = [
  "F",   # Pyflakes
  "E",   # Pycodestyle
  "I",   # isort
  "UP",  # Pyupgrade
  "TID", # flake8-tidy-imports
  "W",
]
extend-safe-fixes = [
  "TID252", # absolute imports
]
fixable = ["I", "TID252", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["blackdoc"]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
