[metadata]
name = black-doctest
author = Justus Magin
author_email = keewis@posteo.de
license = MIT
description = run black on documentation code snippets
long_description = file: README.rst
url = https://github.com/keewis/black-doctest
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Documentation
    Topic :: Software Development :: Documentation
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

[options]
python_requires = >=3.6
install_requires =
    black
    more_itertools
    importlib-metadata; python_version < "3.8"

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    .eggs
    doc
