[metadata]
name = blackdoc
author = Justus Magin
author_email = keewis@posteo.de
license = MIT
description = run black on documentation code snippets
long_description_content_type = text/x-rst
long_description = file: README.rst
url = https://github.com/keewis/blackdoc
project_urls =
  Documentation=https://blackdoc.readthedocs.io/en/stable
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Documentation
    Topic :: Software Development :: Documentation
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

[options]
packages = find:
python_requires = >=3.7
install_requires =
    black
    more_itertools
    importlib-metadata; python_version < "3.8"
    tomli
    pathspec

[options.entry_points]
console_scripts =
    blackdoc=blackdoc.__main__:main

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
exclude=
    .eggs
