[metadata]
name = blackdoc
author = Justus Magin
author_email = keewis@posteo.de
license = MIT
description = run black on documentation code snippets
long_description_content_type = text/x-rst
long_description = file: README.rst
url = https://github.com/keewis/blackdoc
project_urls =
  Documentation=https://blackdoc.readthedocs.io/en/stable
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Topic :: Documentation
    Topic :: Software Development :: Documentation
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

[options]
packages = find:
python_requires = >=3.9
install_requires =
    black
    more_itertools
    tomli
    pathspec
    rich

[options.entry_points]
console_scripts =
    blackdoc=blackdoc.__main__:main
